ci/operator-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: htc-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: htc-operator
  template:
    metadata:
      labels:
        name: htc-operator
    spec:
      serviceAccountName: htc-operator
      containers:
        - name: htc-operator
          # Replace this with the built image name
          image: xkxgygmoqkguuddnkz/htc-operator
          command: ["sh", "-c"]
          args: [main]
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /mnt/kinit
            name: kinit-secret-vol
          - mountPath: /data
            name: vol-cephfs-cms
      volumes:
      - name: vol-cephfs-cms
        persistentVolumeClaim:
          claimName: pvc-cephfs-cms
          readOnly: false
      - name: kinit-secret-vol
        secret:
          secretName: kinit-secret
---
apiVersion: v1
kind: Service
metadata:
  name: cloudevents-service
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    name: htc-operator
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloudevents-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.entryPoints: "http"
spec:
  rules:
  - host: <HOSTNAME_HERE>
    http:
      paths:
      - path: /
        backend:
          serviceName: cloudevents-service
          servicePort: 80
